@@ -3,9 +3,9 @@
 
 PKG_NAME="rr-config-tool"
 PKG_VERSION="1.0"
-PKG_REV="105"
+PKG_REV="106"
 PKG_ARCH="any"
-PKG_LICENSE="GPLv2"
+PKG_LICENSE="GPL-2.0-or-later"
 PKG_DEPENDS_TARGET="toolchain"
 PKG_SECTION="service"
 PKG_SHORTDESC="LibreELEC-RR configuration tool"
