@@ -12,6 +12,7 @@
     <setting id="RR_PA_UDEV"       type="bool"   label="30006"   default="true" visible="eq(-1,PulseAudio))" />
     <setting id="RR_PA_TSCHED"     type="bool"   label="30007"   default="true" visible="eq(-2,PulseAudio))" />
     <setting id="RR_AUDIO_VOLUME"  type="slider" label="30008"   default="75"   range="0,5,100" option="percent" visible="eq(-3,PulseAudio))" />
+    <setting id="RR_FLUIDSYNTH"    type="bool"   label="30009"   default="true" visible="eq(-4,PulseAudio))" />
   </category>
   <category  label="30100">
     <setting label="30101" type="lsep"/>
