@@ -2,8 +2,9 @@
     <setting id="RR_AUDIO_DEVICE"                 default="true">sysdefault:CARD=PCH</setting>
     <setting id="RR_AUDIO_BACKEND"                default="true">ALSA</setting>
     <setting id="RR_PA_UDEV"                      default="true">true</setting>
-    <setting id="RR_PA_TSCHED"                    default="true">false</setting>
+    <setting id="RR_PA_TSCHED"                    default="true">true</setting>
     <setting id="RR_AUDIO_VOLUME"                 default="true">75</setting>
+    <setting id="RR_FLUIDSYNTH"                   default="true">true</setting>
     <setting id="RR_KMS"                          default="true">false</setting>
     <setting id="RR_QT_AUTO_SCREEN_SCALE_FACTOR"  default="true">true</setting>
     <setting id="RR_QT_SCALE_FACTOR"              default="true">1</setting>
